# colossus

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  Makefile  README.md  rebrand_to_colossus.sh
.builds/: freebsd.yml  linux.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml  upload_asset.sh
assets/: banner.txt
colossus/: Cargo.toml  build.rs
colossus/src/: cli.rs  clipboard.rs  event.rs  ipc.rs  logging.rs  main.rs  message_bar.rs  panic.rs  window_context.rs
colossus/src/config/: bell.rs  bindings.rs  color.rs  cursor.rs  debug.rs  font.rs  general.rs  mod.rs  monitor.rs  mouse.rs  scrolling.rs  selection.rs  terminal.rs  ui_config.rs  window.rs
colossus/src/display/: color.rs  content.rs  cursor.rs  damage.rs  hint.rs  meter.rs  mod.rs  window.rs
colossus/src/input/: keyboard.rs  mod.rs
colossus/windows/: colossus.rc
colossus_config/: Cargo.toml
colossus_config/src/: lib.rs
colossus_config_derive/: Cargo.toml
colossus_config_derive/src/: lib.rs  serde_replace.rs
colossus_config_derive/tests/: config.rs
colossus_terminal/: CHANGELOG.md  Cargo.toml
colossus_terminal/src/: event_loop.rs
colossus_terminal/tests/: ref.rs
docs/: features.md
extra/: colossus.info
extra/completions/: _colossus  colossus.bash  colossus.fish
extra/linux/: Alacritty.desktop  org.colossus.Alacritty.appdata.xml
extra/man/: colossus-bindings.5.scd  colossus-msg.1.scd  colossus.1.scd  colossus.5.scd
preset/: colossus.toml
scripts/: colossus  colossus-banner  colossus-pq-ssh  colossus-rc.sh  create-flamegraph.sh
(+46 files in other folders)
